--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="Header">
         <section class="cabecalho">
-            <a href="" class="Home">
+            <a href="https://gabriellucasdev.github.io/RestauranteBurguer/" class="Home">
                 <img src="img/homeicon.png" alt="LogoHome">
             </a>
             <nav class="navbar">
